--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'Z'
 - !lcsh 'Manchester (England) -- History'
 - !lcsh 'Freedom of the press -- Great Britain'
+- GITenberg
 title: "The Battle of The Press\r\nAs Told in the Story of the Life of Richard Carlile\
   \ by His Daughter, Theophila Carlile Campbell"
 url: http://www.gutenberg.org/ebooks/38370
